# openjd-rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md  RELEASING.md  THIRD-PARTY-LICENSES  deny.toml  release-plz.toml
.claude/skills/: eval-crate
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  openjd-for-js.yml  record_pr.yml  release-plz.yml
crates/openjd-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/openjd-cli/src/: check.rs  common.rs  help.rs  main.rs  summary.rs
crates/openjd-cli/src/run/: execution.rs  mod.rs  params.rs
crates/openjd-cli/tests/: cli_tests.rs
crates/openjd-cli/tests/templates/: wrap_env_failing_enter.yaml  wrap_env_second.yaml  wrap_env_with_param.yaml  wrap_job_with_inner_env.yaml  wrap_simple_job.yaml
crates/openjd-expr/: CHANGELOG.md  Cargo.toml  README.md
crates/openjd-expr/src/: default_library.rs  format_string.rs  function_library.rs  lib.rs  path_mapping.rs  profile.rs  range_expr.rs  symbol_table.rs  types.rs  uri_path.rs  value.rs
crates/openjd-expr/src/eval/: evaluator.rs  parse.rs
crates/openjd-expr/src/functions/: arithmetic.rs  comparison.rs  list.rs  math.rs  misc.rs  path.rs  path_parse.rs  regex.rs  repr.rs  string.rs
crates/openjd-expr/tests/: integration.rs  test_error_formatting.rs  test_evaluation.rs  test_expr_value.rs  test_format_strings.rs  test_function_context.rs  test_function_library.rs  test_list_nesting.rs  test_lists.rs  test_method_coercion.rs  test_misc_builtins.rs  test_operation_limit.rs  test_path_format_mismatch.rs  test_path_mapping.rs  test_paths.rs  test_profile_threading.rs  test_rfc_examples.rs  test_slicing.rs  test_strings.rs  test_symbol_table.rs  test_types.rs  test_types_evaluate.rs  test_unresolved_eval.rs  test_uri_paths.rs
crates/openjd-expr/tests/integration/: test_arithmetic.rs  test_comparison.rs  test_equality.rs  test_error_formatting.rs  test_evaluation.rs  test_expr_value.rs  test_format_strings.rs  test_int64_bounds.rs  test_memory.rs  test_operation_limit.rs  test_path_mapping.rs  test_paths.rs  test_range_expr.rs  test_string_operation_counting.rs  test_strings.rs  test_symbol_table.rs  test_target_type_union.rs  test_types.rs  test_uri_paths.rs
crates/openjd-for-js/: Cargo.toml  README.md  package.json
crates/openjd-for-js/js-tests/: smoke.test.js
crates/openjd-for-js/src/: expr.rs  lib.rs  model.rs
crates/openjd-for-js/tests/: test_caller_limits.rs  test_decode.rs  test_path_parameter_options.rs
crates/openjd-model/: CHANGELOG.md  Cargo.toml  README.md
crates/openjd-model/src/: error.rs  lib.rs  test_expr_param_constraints.rs  test_instantiate_and_display.rs  test_lazy_param_space.rs  types.rs
crates/openjd-model/src/job/: mod.rs  step_dependency_graph.rs  step_param_space.rs
crates/openjd-model/src/template/: actions.rs  mod.rs  (+7 more)
crates/openjd-model/tests/: integration.rs  test_create_job.rs  test_environment_template.rs  test_feature_bundle_1.rs  test_job_parameters.rs  test_job_template.rs  test_parameter_space.rs  test_parse.rs  test_redacted_env_vars.rs  test_step_dependency_graph.rs  test_step_param_space_iter.rs  test_template_posix_paths.rs
crates/openjd-sessions/: CHANGELOG.md  Cargo.toml  README.md
crates/openjd-sessions/src/: cross_user_helper.rs  embedded_files.rs  error.rs  helper_binary.rs  lib.rs  session.rs  subprocess.rs  tempdir.rs  win32.rs  win32_permissions.rs
crates/openjd-sessions/src/helper/: Cargo.toml  deny.toml
crates/openjd-sessions/src/helper/src/: main.rs  protocol.rs  runner.rs  runner_win.rs
crates/openjd-sessions/src/helper/tests/: test_helper_protocol.rs
crates/openjd-sessions/src/runner/: env_script.rs  mod.rs  step_script.rs
crates/openjd-sessions/tests/: test_cross_user.rs  test_cross_user_windows.rs  test_error_messages.rs  test_helper.rs  test_session.rs  test_session_env_step.rs  test_session_scenarios.rs
crates/openjd-sessions/tests/integration/: test_cross_user.rs  test_cross_user_windows.rs  test_session.rs  test_session_scenarios.rs  test_windows_permissions.rs  test_wrap_actions.rs
crates/openjd-sessions/tests/scenarios/parameter_types/: all_types_scenario.yaml  basic_task_param_types_scenario.yaml
crates/openjd-sessions/tests/support/: long_running.sh  long_running_ignore.sh  spawn_child.sh
crates/openjd-snapshots/: CHANGELOG.md  Cargo.toml  README.md
crates/openjd-snapshots/scripts/bench/: s3.sh  variance.sh
crates/openjd-snapshots/src/: codec.rs  data_cache.rs  error.rs  hash_cache.rs  lib.rs  manifest.rs  s3_check_cache.rs
crates/openjd-snapshots/src/ops/: cache_sync.rs  collect.rs  compose.rs  download.rs  hash_op.rs  hash_upload.rs  subtree.rs
crates/openjd-snapshots/tests/: test_codec.rs  test_error_messages.rs  test_quality_probes.rs  test_s3_data_cache.rs  test_subtree.rs
docs/dev/: README.md  regenerating-quality-reports.md
reports/: expr-model-future-revision-readiness.md  expr-quality-evaluation-report.md  model-quality-evaluation-report.md  snapshots-quality-evaluation-report.md
scripts/: check_copyright_headers.sh  check_third_party_licenses.sh  coverage.sh  generate_third_party_licenses.sh
specs/: architecture.md  expr-quality-evaluation-report.md  job-attachments-snapshots.md  windows-cross-user-helper.md
specs/cli/: README.md  architecture.md  check.md  help.md  logging.md  parameter-parsing.md  run.md  summary.md
specs/expr/: architecture.md  evaluator.md  format-string.md  function-library.md  parser.md  path-mapping.md  public-api.md  range-expr.md  symbol-table.md  type-system.md  values.md
specs/model/: README.md  capabilities.md  error-handling.md  job-creation.md  job-types.md  parameter-space.md  parameters.md  parsing.md  public-api.md  template-types.md
specs/openjd-for-js/: spec.md
specs/sessions/: cross-user.md  embedded-cross-user-helper.md  public-api.md  session.md  subprocess.md
specs/snapshots/: README.md  public-api.md  snapshot_manifest_types.md  snapshot_operation_compose.md  snapshot_operation_download_pipeline.md  snapshot_operation_hash_upload_pipeline.md  snapshot_overview.md
(+15 files in other folders)
