[package]
name = "openjd-for-js"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "[Experimental] Open Job Description for ECMAScript — model, expression, and validation via WebAssembly"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openjd-model = { path = "../openjd-model", version = "0.4.0" }
openjd-expr = { path = "../openjd-expr", version = "0.2.1" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
