[package]
name = "openjd-sessions"
version = "0.3.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Open Job Description sessions — local job execution runtime"
include = [
    "/src/**",
    "/tests/**",
    "/build.rs",
    "/README.md",
    "/LICENSE-*",
    "/NOTICE",
]
keywords = ["openjd", "openjobdescription", "session", "subprocess", "runtime"]
categories = ["command-line-utilities", "os"]
build = "build.rs"

[features]
test-utils = []

[dependencies]
openjd-expr = { path = "../openjd-expr", version = "0.2.0" }
openjd-model = { path = "../openjd-model", version = "0.3.1" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
thiserror = { workspace = true }
shlex = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "time", "sync", "macros", "fs"] }
tokio-util = "0.7"
log = { version = "0.4", features = ["kv", "kv_std"] }
bitflags = "2"
uuid = { version = "1", features = ["v4"] }
getrandom = "0.4"
futures-util = "0.3.32"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process", "user", "fs"] }

[target.'cfg(windows)'.dependencies]
which = "8.0.2"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment",
    "Win32_System_RemoteDesktop",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]

# Build-dependencies that ensure the helper binary's crate deps are fetched
# into CARGO_HOME during `cargo fetch`. The helper (src/helper/) is compiled
# by build.rs via a nested `cargo build --offline` invocation; without these
# entries, offline build environments fail because the helper's deps were never downloaded.
[build-dependencies]
# Helper needs nix with "poll" (parent [dependencies] has signal/process/user/fs but not poll)
[target.'cfg(unix)'.build-dependencies]
nix = { version = "0.31", features = ["signal", "process", "poll"] }

[target.'cfg(windows)'.build-dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[dev-dependencies]
tempfile = "3"
testing_logger = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
openjd-sessions = { path = ".", features = ["test-utils"] }

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }
