[package]
name = "openjd-snapshots"
description = "[Experimental] Job attachments snapshot library for content-addressed file tree operations. The v2023 on-disk manifest format is stable and used by AWS Deadline Cloud; the v2025 format is an experimental draft."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
glob = "0.3"
walkdir = "2"
# Pinned to 0.39: rusqlite 0.40 pulls in libsqlite3-sys 0.38, whose build
# script uses the unstable `cfg_select!` feature and fails to compile on
# stable Rust (including our toolchain). Revisit once cfg_select stabilizes.
rusqlite = { version = "0.39", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
tracing = { workspace = true }
rayon = "1"
# Disable default features to avoid pulling in the legacy `rustls` feature,
# which activates `aws-smithy-runtime/tls-rustls` → the hyper 0.14 + rustls 0.21
# (`legacy-rustls-ring`) back-compat chain. Instead we opt into
# `default-https-client`, which uses the modern rustls 0.23 + aws-lc path
# (`rustls-aws-lc`). This removes the `rustls-webpki 0.101.x` advisory noise
# from `cargo deny` entirely.
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "sigv4a",
    "http-1x",
    "default-https-client",
    "rt-tokio",
] }
aws-sdk-sts = { version = "1", default-features = false, features = [
    "sigv4a",
    "default-https-client",
    "rt-tokio",
] }
bytes = "1"
async-trait = "0.1"
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
s3s = "0.14"
s3s-fs = "0.14"
s3s-aws = "0.14"
aws-config = "1"

[[bin]]
name = "openjd-snapshots-bench"
path = "src/bin/bench.rs"
required-features = ["bench"]

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.rand]
version = "0.10"
optional = true

[dependencies.tempfile]
version = "3"
optional = true

[dependencies.aws-config]
version = "1"
optional = true

[features]
bench = ["clap", "rand", "tempfile", "aws-config"]
